Update the token?

--- a/Readme
+++ b/Readme
@@ -3,5 +3,8 @@ Sat Nov 24 19:28:34 PST 2012
 
 This is the initial coding of the coLab project.
 
+Thu Jul  1 15:34:19 MDT 2021
+Updated to allow for Token access
+
 -jk
 
